Added a new java project

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
 	    									<h3>ITM - Interactive Task Manager</h3>
 	    									<hr class="star-primary">
 	    									<img src="img/projects/ITM.png" class="img-responsive img-centered" alt="">
-	    									<p style="text-align: justify;">ITM is a task manager molded into a snake and ladder game. The game is embedded into the applicatio to make it more engaging. The application uses web technologies like HTML5, CSS3, Javascript and some AJAX. </p>
+	    									<p style="text-align: justify;">ITM is a task manager molded into a snake and ladder game. The game is embedded into the applicatio to make it Montserrat engaging. The application uses web technologies like HTML5, CSS3, Javascript and some AJAX. </p>
 	    									<ul class="list-inline item-details">
 	    										<li>Tags:
 	    											<strong>HTML5, CSS3, Javascript, AJAX</strong>
@@ -1018,67 +1018,21 @@
     						<div class="col-lg-12">
     							<div class="modal-body">
     								<div class="col-lg-4 ">
-    									<h2>Project Title</h2>
+    									<h2>Media Player</h2>
     									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+    									<img src="img/projects/mediaPlayer.png" class="img-responsive img-centered" alt="">
+    									<p>A Media Player developed in Java using the JavaFX library. The Media is capable of running both audio and video files. The player also allows you to play a desired video using the open tab in file menu.</p>
     									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
-    										</li>
     										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
+    											<strong>December 2016</a>
     											</strong>
     										</li>
-    										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
+    										<li>Tags:
+    											<strong>Java, Media Player, JavaFX</a>
     											</strong>
     										</li>
     									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
-    								</div>
-    								<div class="col-lg-4">
-    									<h2>Project Title</h2>
-    									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-    									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
-    										</li>
-    										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
-    											</strong>
-    										</li>
-    										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
-    											</strong>
-    										</li>
-    									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
-    								</div>
-    								<div class="col-lg-4">
-    									<h2>Project Title</h2>
-    									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-    									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
-    										</li>
-    										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
-    											</strong>
-    										</li>
-    										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
-    											</strong>
-    										</li>
-    									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
+    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Mdeia%20Player"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
     								</div>
     							</div>
     						</div>
