--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
     									<h2>Media Player</h2>
     									<hr class="star-primary">
     									<img src="img/projects/mediaPlayer.png" class="img-responsive img-centered" alt="">
-    									<p>A Media Player developed in Java using the JavaFX library. The Media is capable of running both audio and video files. The player also allows you to play a desired video using the open tab in file menu.</p>
+    									<p style="text-align: justify;">A Media Player developed in Java using the JavaFX library. The Media is capable of running both audio and video files. The player also allows you to play a desired video using the open tab in file menu.</p>
     									<ul class="list-inline item-details">
     										<li>Date:
     											<strong>December 2016</a>
