Added a new Java Project

--- a/index.html
+++ b/index.html
@@ -1034,6 +1034,23 @@
     									</ul>
     									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Mdeia%20Player"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
     								</div>
+    								<div class="col-lg-4 ">
+    									<h2>Blocks Game</h2>
+    									<hr class="star-primary">
+    									<img src="img/projects/blocks.png" class="img-responsive img-centered" alt="">
+    									<p style="text-align: justify;">A blocks game developed using the the Java AWT Class. The game allows you to hit the blocks and destroy them. The game also features a powerup which increses the number of balls. Press enter and start playing.</p>
+    									<ul class="list-inline item-details">
+    										<li>Date:
+    											<strong>December 2016</a>
+    											</strong>
+    										</li>
+    										<li>Tags:
+    											<strong>Java, Block Game, Java AWT</a>
+    											</strong>
+    										</li>
+    									</ul>
+    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Blocks"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+    								</div>
     							</div>
     						</div>
     					</div>
