--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
     					</div>
     				</div>
     			</div>
-    		</footer>
+    	</footer>
 
     		<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     		<div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
@@ -1070,68 +1070,58 @@
     					<div class="row">
     						<div class="col-lg-12">
     							<div class="modal-body">
-    								<div class="col-lg-4 ">
-    									<h2>Project Title</h2>
-    									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-    									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
-    										</li>
-    										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
-    											</strong>
-    										</li>
-    										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
-    											</strong>
-    										</li>
-    									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
-    								</div>
-    								<div class="col-lg-4">
-    									<h2>Project Title</h2>
-    									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-    									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
-    										</li>
-    										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
-    											</strong>
-    										</li>
-    										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
-    											</strong>
-    										</li>
-    									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
-    								</div>
-    								<div class="col-lg-4">
-    									<h2>Project Title</h2>
-    									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-    									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
-    										</li>
-    										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
-    											</strong>
-    										</li>
-    										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
-    											</strong>
-    										</li>
-    									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
+    								<div class="col-lg-12">
+	    								<div class="col-lg-4 ">
+	    									<h2>Python GUI Calculator</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/PythonCalculator.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A simple calculator developed in python do basic Calculations like Addition, Subtraction, Multiplication and Division. The ptogram uses the Tkinter Module of the python library to for thr GUI.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Date:
+	    											<strong><a href="">November 2016</a>
+	    											</strong>
+	    										</li>
+	    										<li>Tags:
+	    											<strong><a href="">Python, Calculator, Tkinter</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Calculator.py"><button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button></a>
+	    								</div>
+	    								<div class="col-lg-4 ">
+	    									<h2>Python Bounce Game</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/PythonBounceGame.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A GUI game developed using the Tkinter module of Python. The game allows user to bounce the ball up and control the paddle using arrow keys. The game is over once the ball hits the ground.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Date:
+	    											<strong><a href="">December 2016</a>
+	    											</strong>
+	    										</li>
+	    										<li>Tags:
+	    											<strong><a href="">Python, Game, Tkinter</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Bounce-Game.py"><button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button></a>
+	    								</div>
+	    								<div class="col-lg-4 ">
+	    									<h2>Python Ping-Pong Game</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/PythonPingPong.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A Ping-Pong game developed in python using the Tkinter module. The game allows two players to play the game simultaneously using 'A-D' and Left-Right keys respectively. The first player to reach 10 wins the game.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Date:
+	    											<strong><a href="">December 2016</a>
+	    											</strong>
+	    										</li>
+	    										<li>Tags:
+	    											<strong><a href="">Python, Ping-Pong, Tkinter</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Ping-Pong.py"><button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button></a>
+	    								</div>
     								</div>
     							</div>
     						</div>
