Adjusted alignment and database portfolio

--- a/index.html
+++ b/index.html
@@ -728,6 +728,8 @@
 
 
     		<!-- Portfolio Modals -->
+
+    		<!------------------------------- Web Development ------------------>
     		<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -846,6 +848,7 @@
     			</div>
     		</div>
 
+    		<!------------------------------- Game Development ------------------>
     		<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -922,7 +925,7 @@
 
     							<div class="col-lg-12">
     								<div class="col-lg-4 ">
-    									<h3>Unity - 2D Bounce Game</h3>
+    									<h3>Unity 5.0.0 - 2-D Bounce Game</h3>
     									<hr class="star-primary">
     									<img src="img/projects/Unity2dGame.png" class="img-responsive img-centered" alt="">
     									<p style="text-align: justify;">A simple 2D Bounce game developed in Unity which introduces a ball and a stone and some coins. The game explains the basic functioning of Unity like gravity, Layers and Physics. The game is built on Unity 5.0</p>
@@ -962,6 +965,7 @@
     			</div>
     		</div>
 
+    		<!-------------------------------Android Development ------------------>
     		<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -976,22 +980,22 @@
     							<div class="modal-body">
     								<div class="col-lg-12">
     									<div class="col-lg-4 ">
-    									<h2>Tic-Tac-Toe</h2>
-    									<hr class="star-primary">
-    									<img src="img/projects/TicTacToeAndroid.png" class="img-responsive img-centered" alt="">
-    									<p>A simple game developed in Java (Android Studio). The game allows you to play a Tic-Tac-Toe game with yourself. Both the cross and circle for the game is controlled by the player himself. Thus two players can play this game on a same mobile.</p>
-    									<ul class="list-inline item-details">
-    										<li>Tags:
-    											<strong>Android, Tic-Tac-Toe, Game Development
-    											</strong>
-    										</li>
-    										<li>Date:
-    											<strong>December 2016</a>
-    											</strong>
-    										</li>
-    									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
-    								</div>
+	    									<h2>Tic-Tac-Toe</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/TicTacToeAndroid.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A simple game developed in Java (Android Studio). The game allows you to play a Tic-Tac-Toe game with yourself. Both the cross and circle for the game is controlled by the player himself. Thus two players can play this game on a same mobile.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Android, Tic-Tac-Toe, Game Development
+	    											</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>December 2016</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
+    									</div>
     								</div>
     							</div>
     						</div>
@@ -1000,6 +1004,7 @@
     			</div>
     		</div>
 
+    		<!------------------------------- Java Development ------------------>
     		<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -1053,6 +1058,7 @@
     			</div>
     		</div>
 
+    		<!------------------------------- Python Development ------------------>
     		<div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -1125,6 +1131,7 @@
     			</div>
     		</div>
 
+    		<!------------------------------- Database Development ------------------>
     		<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
     			<div class="modal-content">
     				<div class="close-modal" data-dismiss="modal">
@@ -1137,25 +1144,9 @@
     					<div class="row">
     						<div class="col-lg-8 col-lg-offset-2">
     							<div class="modal-body">
-    								<h2>Project Title</h2>
-    								<hr class="star-primary">
-    								<img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-    								<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-    								<ul class="list-inline item-details">
-    									<li>Client:
-    										<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    										</strong>
-    									</li>
-    									<li>Date:
-    										<strong><a href="http://startbootstrap.com">April 2014</a>
-    										</strong>
-    									</li>
-    									<li>Service:
-    										<strong><a href="http://startbootstrap.com">Web Development</a>
-    										</strong>
-    									</li>
-    								</ul>
-    								<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+    								<div class="col-lg-12">
+    									<h2 class="text-center">Projects will be uploaded soon!!</h2>
+    								</div>
     							</div>
     						</div>
     					</div>
