Fixed data-modal mistake

--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@
 	    											</strong>
 	    										</li>
 	    									</ul>
-	    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/Tic-Tac-Toe"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     									</div>
     								</div>
     							</div>
