Added a new Android Project

--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
 	    									<p style="text-align: justify;">A simple game developed in Java (Android Studio). The game allows you to play a Tic-Tac-Toe game with yourself. Both the cross and circle for the game is controlled by the player himself. Thus two players can play this game on a same mobile.</p>
 	    									<ul class="list-inline item-details">
 	    										<li>Tags:
-	    											<strong>Android, Tic-Tac-Toe, Game Development
+	    											<strong>Android, Tic-Tac-Toe, Android Development
 	    											</strong>
 	    										</li>
 	    										<li>Date:
@@ -995,6 +995,23 @@
 	    										</li>
 	    									</ul>
 	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/Tic-Tac-Toe"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+    									</div>
+    									<div class="col-lg-4 ">
+	    									<h2>French Phrases</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/AndroidPhrases.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">An app which will teach you how to speak some basic greetings in French. The app includes button with text which will be read out to you in french so that you can hear and learn. The app only uses one function for all buttons.(Optimized)</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Android, French-Phrases, Android Development
+	    											</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     									</div>
     								</div>
     							</div>
