Added a new Android Project

--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
     							<div class="modal-body">
     								<div class="col-lg-12">
     									<div class="col-lg-4 ">
-	    									<h2>Tic-Tac-Toe</h2>
+	    									<h2>Tic-Tac-Toe Game</h2>
 	    									<hr class="star-primary">
 	    									<img src="img/projects/TicTacToeAndroid.png" class="img-responsive img-centered" alt="">
 	    									<p style="text-align: justify;">A simple game developed in Java (Android Studio). The game allows you to play a Tic-Tac-Toe game with yourself. Both the cross and circle for the game is controlled by the player himself. Thus two players can play this game on a same mobile.</p>
