Added github icon - python

--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
 	    											</strong>
 	    										</li>
 	    									</ul>
-	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Calculator.py"><button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button></a>
+	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Calculator.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 	    								</div>
 	    								<div class="col-lg-4 ">
 	    									<h2>Python Bounce Game</h2>
@@ -1121,7 +1121,7 @@
 	    											</strong>
 	    										</li>
 	    									</ul>
-	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Bounce-Game.py"><button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button></a>
+	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Bounce-Game.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 	    								</div>
 	    								<div class="col-lg-4 ">
 	    									<h2>Python Ping-Pong Game</h2>
@@ -1138,7 +1138,7 @@
 	    											</strong>
 	    										</li>
 	    									</ul>
-	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Ping-Pong.py"><button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button></a>
+	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Ping-Pong.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 	    								</div>
     								</div>
     							</div>
