--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     					<p>Master of Science in Computer Science</p>
     				</div>
     				<div class="col-lg-12">
-    					<p>Course Work: Human Computer Interaction, Algorithm, Web Programming, DBMS</p>
+    					<p>GPA: <span>3.6/4.0</span></p>
     				</div>
     			</div><br/>
     			<div class="row">
