Added graduate date

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     						<h4>Stevens Institute of Technology, Hoboken, NJ</h4>
     					</div>
     					<div class="pull-right">
-    						<h4 class="text-right">Expected 2017</h4>
+    						<h4 class="text-right">Expected December 2017</h4>
     					</div>
     				</div>
     				<div class="col-lg-12">
