Added a new Java Project

--- a/index.html
+++ b/index.html
@@ -1034,39 +1034,58 @@
     					<div class="row">
     						<div class="col-lg-12">
     							<div class="modal-body">
-    								<div class="col-lg-4 ">
-    									<h2>Media Player</h2>
-    									<hr class="star-primary">
-    									<img src="img/projects/mediaPlayer.png" class="img-responsive img-centered" alt="">
-    									<p style="text-align: justify;">A Media Player developed in Java using the JavaFX library. The Media is capable of running both audio and video files. The player also allows you to play a desired video using the open tab in file menu.</p>
-    									<ul class="list-inline item-details">
-    										<li>Date:
-    											<strong>December 2016</a>
-    											</strong>
-    										</li>
-    										<li>Tags:
-    											<strong>Java, Media Player, JavaFX</a>
-    											</strong>
-    										</li>
-    									</ul>
-    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Mdeia%20Player"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
-    								</div>
-    								<div class="col-lg-4 ">
-    									<h2>Blocks Game</h2>
-    									<hr class="star-primary">
-    									<img src="img/projects/blocks.png" class="img-responsive img-centered" alt="">
-    									<p style="text-align: justify;">A blocks game developed using the the Java AWT Class. The game allows you to hit the blocks and destroy them. The game also features a powerup which increses the number of balls. Press enter and start playing.</p>
-    									<ul class="list-inline item-details">
-    										<li>Date:
-    											<strong>December 2016</a>
-    											</strong>
-    										</li>
-    										<li>Tags:
-    											<strong>Java, Block Game, Java AWT</a>
-    											</strong>
-    										</li>
-    									</ul>
-    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Blocks"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+    								<div class="col-lg-12">
+    									<div class="col-lg-4 ">
+	    									<h2>Media Player</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/mediaPlayer.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A Media Player developed in Java using the JavaFX library. The Media is capable of running both audio and video files. The player also allows you to play a desired video using the open tab in file menu.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Date:
+	    											<strong>December 2016</a>
+	    											</strong>
+	    										</li>
+	    										<li>Tags:
+	    											<strong>Java, Media Player, JavaFX</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Mdeia%20Player"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+	    								</div>
+	    								<div class="col-lg-4 ">
+	    									<h2>Blocks Game</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/blocks.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A blocks game developed using the the Java AWT Class. The game allows you to hit the blocks and destroy them. The game also features a powerup which increses the number of balls. Press enter and start playing.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Date:
+	    											<strong>December 2016</a>
+	    											</strong>
+	    										</li>
+	    										<li>Tags:
+	    											<strong>Java, Block Game, Java AWT</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Blocks"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+    									</div>
+    									<div class="col-lg-4 ">
+	    									<h2>Chat Room</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/AndroidMessenger.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">An application which allows users to join a chat room. The app asks for a username to login the user into the application. Once the user is added in the chat room, he can chat with all the members in the chat room.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    										<li>Tags:
+	    											<strong>Java, Messenger, Socket</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Messenger"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+    									</div>
     								</div>
     							</div>
     						</div>
