Added new Projects

--- a/index.html
+++ b/index.html
@@ -564,10 +564,6 @@
     								</li>
     							</ul>
     						</div>
-    						<div class="footer-col col-md-4">
-    							<h3>Something</h3>
-    							<p>Something Here <a href="http://startbootstrap.com">Put some here!!</a>.</p>
-    						</div>
     					</div>
     				</div>
     			</div>
@@ -1022,6 +1018,23 @@
 	    									</ul>
 	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     									</div>
+    									<div class="col-lg-4 ">
+	    									<h2>egg Timer</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/AndroidEggTimer.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">An app which will let you set up a countdown timer with a maximum limit of 10 mins. The app allows you set you a timer for certain minutes and at the end of the timer the app will produce a sound indicating that the timer has finished.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Android, Timer, Android Development
+	    											</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/EggTimer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+    									</div>
     								</div>
     							</div>
     						</div>
@@ -1096,6 +1109,27 @@
 	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Messenger"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
     									</div>
     								</div>
+    								<div class="col-lg-12">
+    									<div class="col-lg-4">
+    										<div class="col-lg-4 ">
+	    									<h2>Database Query Runner</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/JavaDatabase.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">An application which to connects to a remote database. Once you have entered the correct database credentials, the application connects you to the database and allows you to write and run database queries. The app also return query errors.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    										<li>Tags:
+	    											<strong>Java, Database, Query</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Database"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+    									</div>
+    									</div>
+    								</div>
     							</div>
     						</div>
     					</div>
@@ -1167,6 +1201,25 @@
 	    										</li>
 	    									</ul>
 	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Ping-Pong.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+	    								</div>
+    								</div>
+    								<div class="col-lg-12">
+    									<div class="col-lg-4 ">
+	    									<h2>Python Terminal Blog</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/PythonBlog.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A Python blog application that allows you to create a Blog on your website. The application also allows you to add a new post to your blog with its content. The application use Python flask module. The application uses MongoDB database.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Date:
+	    											<strong><a href="">January 2017</a>
+	    											</strong>
+	    										</li>
+	    										<li>Tags:
+	    											<strong><a href="">Python, Terminal Blog, Flask</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/tree/master/Project/Web%20Application"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 	    								</div>
     								</div>
     							</div>
