--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@
     								</div>
     								<div class="col-lg-12">
     									<div class="col-lg-4 ">
-	    									<h2>Python Terminal Blog</h2>
+	    									<h2>Terminal Blog</h2>
 	    									<hr class="star-primary">
 	    									<img src="img/projects/PythonBlog.png" class="img-responsive img-centered" alt="">
 	    									<p style="text-align: justify;">A Python blog application that allows you to create a Blog on your website. The application also allows you to add a new post to your blog with its content. The application use Python flask module. The application uses MongoDB database.</p>
