--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
 	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     									</div>
     									<div class="col-lg-4 ">
-	    									<h2>egg Timer</h2>
+	    									<h2>Egg Timer App</h2>
 	    									<hr class="star-primary">
 	    									<img src="img/projects/AndroidEggTimer.png" class="img-responsive img-centered" alt="">
 	    									<p style="text-align: justify;">An app which will let you set up a countdown timer with a maximum limit of 10 mins. The app allows you set you a timer for certain minutes and at the end of the timer the app will produce a sound indicating that the timer has finished.</p>
