--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 	    					<div class="col-lg-12">
 	    						<div class="model-body">
 	    							<div class="col-lg-12">
-	    								<h3 class="text-center">Oracle Certified Java Programmer</h3>
+	    								<h3 class="text-center">Oracle Certified Java Programmer- OCJP</h3>
 	    									<hr class="star-primary">
 	    									<img src="img/certificates/oracle.jpg" class="img-responsive img-centered" alt="Oracle Certified Java Programmer">
 	    							</div>
